--- a/index.html
+++ b/index.html
@@ -2,57 +2,316 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YOLOv8 Weed Detection</title>
     <style>
       body {
-        font-family: Arial;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         text-align: center;
-        margin-top: 40px;
+        margin: 20px;
+        background-color: #f5f5f5;
       }
+
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        background: white;
+        padding: 30px;
+        border-radius: 15px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      h1 {
+        color: #2c5530;
+        margin-bottom: 30px;
+      }
+
+      .upload-section {
+        margin-bottom: 30px;
+      }
+
+      input[type="file"] {
+        margin: 10px;
+        padding: 10px;
+        border: 2px dashed #4caf50;
+        border-radius: 10px;
+        background-color: #f9f9f9;
+      }
+
+      button {
+        background-color: #4caf50;
+        color: white;
+        padding: 12px 24px;
+        margin: 10px;
+        font-size: 16px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+
+      button:hover {
+        background-color: #45a049;
+      }
+
+      button:disabled {
+        background-color: #cccccc;
+        cursor: not-allowed;
+      }
+
       #preview {
         margin-top: 20px;
-        width: 60%;
+        max-width: 90%;
+        max-height: 600px;
         border-radius: 10px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       }
-      button {
-        padding: 10px 20px;
-        margin-top: 10px;
+
+      #result {
+        margin: 20px 0;
+        padding: 15px;
+        border-radius: 8px;
         font-size: 16px;
+      }
+
+      .success {
+        background-color: #d4edda;
+        color: #155724;
+        border: 1px solid #c3e6cb;
+      }
+
+      .error {
+        background-color: #f8d7da;
+        color: #721c24;
+        border: 1px solid #f5c6cb;
+      }
+
+      .processing {
+        background-color: #d1ecf1;
+        color: #0c5460;
+        border: 1px solid #bee5eb;
+      }
+
+      .detection-info {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 15px;
+        margin-top: 20px;
+        text-align: left;
+      }
+
+      .detection-card {
+        background: #f8f9fa;
+        padding: 15px;
+        border-radius: 8px;
+        border-left: 4px solid #4caf50;
+      }
+
+      .detection-card h4 {
+        margin: 0 0 10px 0;
+        color: #2c5530;
+      }
+
+      .detection-details {
+        font-size: 14px;
+        color: #666;
+      }
+
+      .stats {
+        display: flex;
+        justify-content: space-around;
+        margin: 20px 0;
+        flex-wrap: wrap;
+      }
+
+      .stat-item {
+        background: #e8f5e8;
+        padding: 15px;
+        border-radius: 8px;
+        margin: 5px;
+        min-width: 120px;
+      }
+
+      .stat-number {
+        font-size: 24px;
+        font-weight: bold;
+        color: #2c5530;
+      }
+
+      .stat-label {
+        font-size: 14px;
+        color: #666;
       }
     </style>
   </head>
   <body>
-    <h1>🌿 YOLOv8 Weed Detection Demo</h1>
-    <input type="file" id="fileInput" accept="image/*" /><br />
-    <button onclick="uploadImage()">Detect</button>
+    <div class="container">
+      <h1>🌿 YOLOv8 Weed Detection Demo</h1>
 
-    <div id="result"></div>
-    <img id="preview" />
+      <div class="upload-section">
+        <input type="file" id="fileInput" accept="image/*" />
+        <br />
+        <button id="detectBtn" onclick="uploadImage()">🔍 Detect Weeds</button>
+      </div>
+
+      <div id="result"></div>
+
+      <div id="statsSection" style="display: none">
+        <div class="stats" id="stats"></div>
+      </div>
+
+      <img id="preview" style="display: none" />
+
+      <div id="detectionInfo" class="detection-info"></div>
+    </div>
 
     <script>
       async function uploadImage() {
         const fileInput = document.getElementById("fileInput");
         const resultDiv = document.getElementById("result");
         const preview = document.getElementById("preview");
-        if (!fileInput.files.length) return alert("Please select an image.");
+        const detectBtn = document.getElementById("detectBtn");
+        const statsSection = document.getElementById("statsSection");
+        const detectionInfo = document.getElementById("detectionInfo");
 
-        const formData = new FormData();
-        formData.append("file", fileInput.files[0]);
+        if (!fileInput.files.length) {
+          alert("Please select an image first.");
+          return;
+        }
 
-        resultDiv.innerHTML = "Processing...";
-        const response = await fetch("/predict", {
-          method: "POST",
-          body: formData,
-        });
-        const data = await response.json();
+        // Reset UI
+        preview.style.display = "none";
+        statsSection.style.display = "none";
+        detectionInfo.innerHTML = "";
 
-        if (data.image_base64) {
-          preview.src = data.image_base64;
-          resultDiv.innerHTML = `<p>Detections: ${data.detections.length}</p>`;
-        } else {
-          resultDiv.innerHTML = `<p>Error: ${data.error}</p>`;
+        // Show processing state
+        detectBtn.disabled = true;
+        detectBtn.textContent = "🔄 Processing...";
+        resultDiv.className = "processing";
+        resultDiv.innerHTML = "Analyzing image for weeds...";
+
+        try {
+          const formData = new FormData();
+          formData.append("file", fileInput.files[0]);
+
+          const response = await fetch("/predict", {
+            method: "POST",
+            body: formData,
+          });
+
+          const data = await response.json();
+
+          if (data.image_base64) {
+            // Show success result
+            preview.src = data.image_base64;
+            preview.style.display = "block";
+
+            resultDiv.className = "success";
+            resultDiv.innerHTML = `
+              <strong>✅ Detection Complete!</strong><br>
+              Found ${data.detection_count} weed detection(s)
+            `;
+
+            // Show stats
+            if (data.detection_count > 0) {
+              statsSection.style.display = "block";
+              document.getElementById("stats").innerHTML = `
+                <div class="stat-item">
+                  <div class="stat-number">${data.detection_count}</div>
+                  <div class="stat-label">Detections</div>
+                </div>
+                <div class="stat-item">
+                  <div class="stat-number">${data.original_size.width}×${
+                data.original_size.height
+              }</div>
+                  <div class="stat-label">Original Size</div>
+                </div>
+                <div class="stat-item">
+                  <div class="stat-number">${Math.round(
+                    (data.detections.reduce(
+                      (sum, det) => sum + det.confidence,
+                      0
+                    ) /
+                      data.detections.length) *
+                      100
+                  )}%</div>
+                  <div class="stat-label">Avg Confidence</div>
+                </div>
+              `;
+
+              // Show detection details
+              detectionInfo.innerHTML = data.detections
+                .map(
+                  (det, index) => `
+                <div class="detection-card">
+                  <h4>Detection ${index + 1}</h4>
+                  <div class="detection-details">
+                    <strong>Confidence:</strong> ${(
+                      det.confidence * 100
+                    ).toFixed(1)}%<br>
+                    <strong>Class:</strong> ${getClassName(det.class_id)}<br>
+                    <strong>Location:</strong> (${Math.round(
+                      det.x1
+                    )}, ${Math.round(det.y1)}) to (${Math.round(
+                    det.x2
+                  )}, ${Math.round(det.y2)})<br>
+                    <strong>Size:</strong> ${Math.round(
+                      det.x2 - det.x1
+                    )} × ${Math.round(det.y2 - det.y1)} pixels
+                  </div>
+                </div>
+              `
+                )
+                .join("");
+            }
+          } else {
+            // Show error
+            resultDiv.className = "error";
+            resultDiv.innerHTML = `<strong>❌ Error:</strong> ${data.error}`;
+          }
+        } catch (error) {
+          resultDiv.className = "error";
+          resultDiv.innerHTML = `<strong>❌ Network Error:</strong> ${error.message}`;
+        } finally {
+          // Reset button
+          detectBtn.disabled = false;
+          detectBtn.textContent = "🔍 Detect Weeds";
         }
       }
+
+      function getClassName(classId) {
+        const classNames = [
+          "Clover",
+          "Crabgrass",
+          "Gamochaeta",
+          "Sphagneticola",
+          "Syndrella",
+        ];
+        return classNames[classId] || `Class ${classId}`;
+      }
+
+      // Allow drag and drop
+      const container = document.querySelector(".container");
+
+      container.addEventListener("dragover", (e) => {
+        e.preventDefault();
+        container.style.backgroundColor = "#e8f5e8";
+      });
+
+      container.addEventListener("dragleave", (e) => {
+        e.preventDefault();
+        container.style.backgroundColor = "white";
+      });
+
+      container.addEventListener("drop", (e) => {
+        e.preventDefault();
+        container.style.backgroundColor = "white";
+
+        const files = e.dataTransfer.files;
+        if (files.length > 0 && files[0].type.startsWith("image/")) {
+          document.getElementById("fileInput").files = files;
+        }
+      });
     </script>
   </body>
 </html>
